# llm-task-switch

./: .gitattributes  .gitignore  LICENSE  README.md  conversational.py  environment.yaml  likelihoods.py  main.py  pyproject.toml  random_conversation.py  sanitise_prompts.py
results/: conversational.ipynb  plot_metrics.ipynb  plot_rouge.ipynb  plot_seeds.ipynb  random_history.ipynb  task_distance.ipynb
scripts/: activate_env.sh  eval_sbatch.sh  eval_sbatch_dm.sh  gw-dm.sh  gw-gw.sh  gw-rt.sh  pilot-gw.sh  pilot-rt-gigaword.sh  pilot.sh  rt-no-prompt.sh  sanitise.sh  single_gw-dm.sh
scripts/eval_aa/: hf_converse.sh  hf_random.sh  llama-analyse.sh  llama.sh  llama_seeds.sh  mistral-analyse.sh  mistral.sh
scripts/eval_age/: llama-analyse.sh  llama-rt.sh  llama.sh  mistral.sh
scripts/eval_dm/: dm-dm-llama.sh  dm-dm.sh  dm-gw-llama.sh  dm-gw-mistral.sh  dm-rt-llama.sh  dm-rt-mistral.sh  dm-tq-mistral.sh  dm-tq.sh  mistral.sh  single_dm.sh
scripts/eval_gsm8k/: mistral.sh  tq.sh
scripts/eval_gw/: gpt4.sh  gw-dm-mistral.sh  gw-dm.sh  gw-gw-llama.sh  gw-gw.sh  gw-rt.sh  gw-tq-mistral.sh  gw-tq.sh  llama.sh  mistral-analyse.sh  mistral-llama.sh  mistral.sh  single_gw.sh
scripts/eval_rt/: llama.sh  llama_ll.sh  mistral.sh  mistral_analyse.sh  mistral_ll.sh
scripts/eval_tq/: llama.sh  mistral.sh
src/data/: archive.dataloader.py  dailymail.py  data_selector.py  dataloader.py  gigaword.py  gsm8k.py  mmlu.py  promptloader.py  rotten_tomatoes.py  tweetqa.py  wikicat.py
src/eval/: eval_metric.py  helpers.py
src/inference/: models.py  predict.py
src/tools/: args.py  (+4 more)
(+2402 files in other folders)
