[project]
name = "inctxt"
version = "0.0.1"
authors = [
  { name = "Akash Gupta", email = "guptaalgebra@gmail.com" },
  { name = "Ivaxi Sheth" },
  { name = "Vyas Raina" },
]
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "evaluate",      # rouge metric
  "mypy",
  "python-dotenv",
  "rouge_score",
  "joblib",
  "seaborn",
  "openai",
]
